-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0
-
None
-
-
7e1e42cbf269c4fd5bbfa0411964bd14e5ae549c
The GUI thread blocks on a wait condition in QAndroidPlatformOpenGLWindow::eglSurface(), because the native surface is -1. The Android thread blocks in QAndroidEventDispatcher::stop(), waiting for the GUI thread to go back to the event loop.
Steps to reproduce:
Run the qopenglwindow example, press the power button twice
For Gerrit Dashboard: QTBUG-41072 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
93768,4 | Android: don't recreate surface on shutdown | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |
93882,3 | Android: Avoid deadlocks on suspend | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |